2008-01-23  Eric Blake  <ebb9@byu.net>

	Fix color.test when using BSD grep.
	* tests/color.test: Ensure that grep can handle non-printing
	characters.

2008-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/lisp3.test: Fix typo.

2008-01-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/am/mans.am (install-man%SECTION%): Prefer generated manpages
	over distributed ones.
	Report and patch by Peter Breitenlohner.
	* tests/man3.test: New test.
	* tests/Makefile.am: Update.

2008-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/tar.test: Skip if no appropriate tar was found.

2008-01-19  NightStrike  <nightstrike@gmail.com>

	* doc/automake.texi (Dependency Tracking): Fix typo.

2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* lib/config-ml.in, lib/config.guess, lib/config.sub,
	lib/symlink-tree: Sync from upstream.

	* Makefile.am (WGET_SV_CVS): Renamed from WGETSGO.
	(WGET_SV_GIT_AC, WGET_SV_GIT_GL, WGET_GCC): New.
	(fetch): Update to match current upstream locations.

2008-01-14  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/automake.texi (DESTDIR, Built sources example): Fix wording.
	* THANKS: Update.
	Reports and suggestions by William Pursell and nightstrike@gmail.com.

2008-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Do not fail if `autoupdate' is not present.
	* tests/obsolete.test: Check for presence of autoupdate.  Apparently,
	FreeBSD may install the other Autoconf programs without a version
	suffix but not autoupdate.

	Fix Heisenbug trying to unset a sometimes-not-set variable.
	* tests/check5.test: Do not error out upon `unset TESTS' due to
	`set -e', in case TESTS was not set.
	* tests/color.test: Likewise.

	* doc/automake.texi (amhello Explained): Fix odd sentence.
	Report by nightstrike@gmail.com.

2008-01-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Rewrite to be more
	resistant to different quoting styles of $1.

	Clarify texinfo.tex and TEXINFO_TEX semantics.