@@ -15,88 +15,51 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-# Make sure nobase_* works.
+# Make sure nobase_* works for libtool libraries as well.
+# This is just the libtool equivalent of nobase.test, split
+# up for greater exposure of nobase.test.
 
-required='gcc'
+required='libtoolize gcc'
 . ./defs || exit 1
 
 set -e
 
 cat >> configure.in <<'EOF'
 AC_PROG_CC
-AC_PROG_RANLIB
+AC_PROG_LIBTOOL
 AC_OUTPUT
 EOF
 
 cat > Makefile.am << 'EOF'
-foodir = $(prefix)/foo
 fooexecdir = $(prefix)/foo
-
-foo_HEADERS = sub/base.h
-nobase_foo_HEADERS = sub/nobase.h
-
-dist_foo_DATA = sub/base.dat
-nobase_dist_foo_DATA = sub/nobase.dat
-
-dist_fooexec_SCRIPTS = sub/base.sh
-nobase_dist_fooexec_SCRIPTS = sub/nobase.sh
-
-fooexec_PROGRAMS = sub/base
-nobase_fooexec_PROGRAMS = sub/nobase
-sub_base_SOURCES = source.c
-sub_nobase_SOURCES = source.c
-
-fooexec_LIBRARIES = sub/libbase.a
-nobase_fooexec_LIBRARIES = sub/libnobase.a
-sub_libbase_a_SOURCES = source.c
-sub_libnobase_a_SOURCES = source.c
+fooexec_LTLIBRARIES = sub/libbase.la
+nobase_fooexec_LTLIBRARIES = sub/libnobase.la
+sub_libbase_la_SOURCES = source2.c
+sub_libnobase_la_SOURCES = source2.c
 
 test-install-data: install-data
-	test   -f inst/foo/sub/nobase.h
-	test ! -f inst/foo/nobase.h
-	test   -f inst/foo/base.h
-	test   -f inst/foo/sub/nobase.dat
-	test ! -f inst/foo/nobase.dat
-	test   -f inst/foo/base.dat
-	test ! -f inst/foo/sub/pnobase.sh
-	test ! -f inst/foo/pbase.sh
-	test ! -f inst/foo/sub/pnobase$(EXEEXT)
-	test ! -f inst/foo/pbase$(EXEEXT)
-	test ! -f inst/foo/sub/libnobase.a
-	test ! -f inst/foo/libbase.a
+	test ! -f inst/foo/sub/libnobase.la
+	test ! -f inst/foo/libbase.la
 
 test-install-exec: install-exec
-	test   -f inst/foo/sub/pnobase.sh
-	test ! -f inst/foo/pnobase.sh
-	test   -f inst/foo/pbase.sh
-	test   -f inst/foo/sub/pnobase$(EXEEXT)
-	test ! -f inst/foo/pnobase$(EXEEXT)
-	test   -f inst/foo/pbase$(EXEEXT)
-	test   -f inst/foo/sub/libnobase.a
-	test ! -f inst/foo/libnobase.a
-	test   -f inst/foo/libbase.a
+	test   -f inst/foo/sub/libnobase.la
+	test ! -f inst/foo/libnobase.la
+	test   -f inst/foo/libbase.la
 EOF
 
 mkdir sub
 
-: > sub/base.h
-: > sub/nobase.h
-: > sub/base.dat
-: > sub/nobase.dat
-: > sub/base.sh
-: > sub/nobase.sh
-
-cat >source.c <<'EOF'
+cat >source2.c <<'EOF'
 int
 main (int argc, char *argv[])
 {
   return 0;
 }
 EOF
-cp source.c source2.c
 
 rm -f install-sh
 
+libtoolize
 $ACLOCAL
 $AUTOCONF
 $AUTOMAKE -a --copy
