@@ -1,3 +1,10 @@
+2008-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/nobase.test: Split off libtool part of nobase.test for
+	increased test exposure, to ...
+	* tests/nobase-libtool.test: ... this new test.
+	* tests/Makefile.am: Update.
+
 2008-01-23  Eric Blake  <ebb9@byu.net>
 
 	Fix color.test when using BSD grep.
